@@ -1,3 +1,8 @@
+2002-01-23  Per Bothner  <per@bothner.com>
+
+	* AppendValues.java:  Removed - moved to gnu.kawa.functions.
+	* Makefile.am:  Update accordingly.
+
 2002-01-21  Per Bothner  <per@bothner.com>
 
 	* Document.java:  Moved to gnu.kawa.xml.
